--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Weather</title>
 </head>
 <body>
+    <form id="search-form">
     <fieldset>
     <div class="container">
         <input type="text" placeholder="Enter a city..." id="input">
-        <input type="button" value="Search" id="search" onclick="search()">
+        <input type="submit" value="Search" id = "search">
         </div>
     <div class="main">
-        <h1></h1>
+        <h2 id ="search-text"></h2>
         <h1><i class="fa-solid fa-sun"></i> Lagos, Nigeria</h1>
         <p>July 16</p>
         <p id="day-time"></p>
@@ -47,6 +48,7 @@
     </div> -->
     <footer><p class="p">Coded by Faith Makinde</p></footer>
 </fieldset>
+</form>
 <script src="index.js"></script>
 </body>
 </html>
