Inputed date and time using javascript

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/70204d8c46.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather</title>
 </head>
 <body>
@@ -18,8 +19,8 @@
     <div class="main">
         <h2 id ="search-text"></h2>
         <h1><i class="fa-solid fa-sun"></i> Lagos, Nigeria</h1>
-        <p>July 16</p>
-        <p id="day-time"></p>
+        <p id="date"></p>
+        <p id="now"></p>
         <h2>28℃</h2>
         <p>Wind: 6.17km/h</p>
         <p>Humidity: 70%</p>
