added my source code link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <footer><p class="p">Coded by &lt;Faith Makinde&gt</p></footer>
     </div>
 </fieldset>
+<p id="mycode"><a href="https://github.com/f8makinde/Weather-App.git">Open-source code</a>, by f8Makinde</p>
 </form>
 <script src="index.js"></script>
 </body>
