--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <h1 id="tmp"></h1>
     <div class="main">
         <h2 id ="search-text"></h2>
-        <h1 id="city"><i class="fa-solid fa-sun"></i> Lagos, Nigeria</h1>
+        <h1 id="city"><i class="fa-solid fa-sun"></i></h1>
+        <span><strong id="myTemp"></strong><small id="convert">℃</small></span>
         <h3 id="des"></h3>
         <p id="date"></p>
         <p id="now"></p>
-        <h1 id="myTemp"></h1>
         <p>Wind: 6.17km/h</p>
         <p>Humidity: 70%</p>
     </div>
@@ -47,7 +47,7 @@
         <footer><p class="p">Coded by &lt;Faith Makinde&gt</p></footer>
     </div>
 </fieldset>
-<p id="mycode"><a href="https://github.com/f8makinde/Weather-App.git">Open-source code</a>, by f8Makinde</p>
+<small id="mycode"><a href="https://github.com/f8makinde/Weather-App.git">Open-source code</a>, by f8Makinde</small>
 </form>
 <script src="index.js"></script>
 </body>
