--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="tmp"></h1>
     <div class="main">
         <h2 id ="search-text"></h2>
-        <h1 id="city"><i class="fa-solid fa-sun"></i></h1>
+        <span id="name"><img src="" alt="" id="icon"><h1 id="city"></h1></span>
         <span><strong id="myTemp"></strong><small id="convert">℃</small></span>
         <h3 id="des"></h3>
         <p id="date"></p>
@@ -40,8 +40,8 @@
         <i class="fa-solid fa-cloud"></i>
      <i class="fa-solid fa-cloud-sun"></i>
   <i class="fa-solid fa-cloud-moon-rain"></i>
-      <i class="fa-solid fa-cloud-sun-rain"></i>
-     <i class="fa-solid fa-cloud-meatball"></i>
+       <i class="fa-solid fa-cloud-sun-rain"></i>
+       <i class="fa-solid fa-cloud-meatball"></i>
     </div>
     <div class="last">
         <footer><p class="p">Coded by &lt;Faith Makinde&gt</p></footer>
