implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main">
         <h2 id ="search-text"></h2>
         <span id="name"><img src="" alt="" id="icon"><h1 id="city"></h1></span>
-        <span><strong id="myTemp"></strong><small id="convert">℃</small></span>
+        <span><strong id="myTemp"></strong><small id="convert"><a href="#" id="celsius-link" class="active">℃ | </a><a href="#" id="fahrenheit-link">℉</a></small></span>
         <h3 id="des"></h3>
         <p id="date"></p>
         <p id="now"></p>
@@ -47,7 +47,7 @@
         <footer><p class="p">Coded by &lt;Faith Makinde&gt</p></footer>
     </div>
 </fieldset>
-<small id="mycode"><a href="https://github.com/f8makinde/Weather-App.git">Open-source code</a>, by f8Makinde</small>
+<small id="mycode"><a href="https://github.com/f8makinde/Weather-App.git" id="source">Open-source code</a>, by f8Makinde</small>
 </form>
 <script src="index.js"></script>
 </body>
