implemented the wind speed and humidity

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h3 id="des"></h3>
         <p id="date"></p>
         <p id="now"></p>
-        <p>Wind: 6.17km/h</p>
-        <p>Humidity: 70%</p>
+        <p id="wind-el"></p>
+        <p id="humidity-el"></p>
     </div>
     <hr>
     <div class="section">
