weather-app design completed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
     <div class="last">
 
-        <footer><p class="p">Coded by &lt;Faith Makinde&gt</p></footer>
+        <footer><p class="p">&copy; F8 Makinde</p></footer>
     </div>
 </fieldset>
 <small id="mycode"><a href="https://github.com/f8makinde/Weather-App.git" id="source">Open-source code</a>, by f8Makinde</small>
